add task functionality with zustand

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
 /* other-styles */
 :root {
   --COLOR-GRAY: #333333;
-  --COLOR-GRAY-LIGHT: #222222;
-  --COLOR-GRAY-DARK: #cccccc;
+  --COLOR-GRAY-LIGHT: #cccccc;
+  --COLOR-GRAY-DARK: #222222;
   --COLOR-ONGOING: #98c1d9;
   --COLOR-DONE: #ee6c4d;
   --font-family: helvitca;
